--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strapi-provider-email-amazon-ses-bulk",
   "version": "1.0.0",
-  "description": "> TODO: description",
+  "description": "Email provider for bulk messages such as newsletters.",
   "author": "Sarp ISIK <wdsarpisik@gmail.com>",
   "homepage": "https://github.com/sarpisik/strapi-provider-email-amazon-ses-bulk#readme",
   "license": "ISC",
@@ -19,6 +19,9 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "strapi": {
+    "isProvider": true
   },
   "bugs": {
     "url": "https://github.com/sarpisik/strapi-provider-email-amazon-ses-bulk/issues"
